# spanish-classifier-tfg

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dataset/60-20-20/: dev.csv  test.csv  train.csv
dataset/70-15-15/: dev.csv  test.csv  train.csv
dataset/75-10-15/: dev.csv  test.csv  train.csv
dataset/80-10-10/: dev.csv  test.csv  train.csv
dataset/original-combined/: all.csv
final-models/dataset-analysis/: Dataset Analysis Distribution.ipynb
my_tests/: Best sentiment classifier transformer (compare different algorithms) (bueno).ipynb  Clasificador sentimiento BERT en español (BETO) (no funciona).ipynb  Dataset Analysis.ipynb  Kaggle Twitter Sentiment Analysis NLTK sklearn (bueno).ipynb  TextBlob y VADER.ipynb
notebooks/: train_vs_eval_loss.ipynb
project_tasks/: lint.sh
scripts/: dataset.sh  evaluator.sh  infer.sh  train.sh
scriptsnf/: dataset.sh  evaluator.sh
src/: Dataset Analysis.ipynb  NaiveBayes.ipynb  SVM.ipynb  Train_dev_all_BERT.ipynb  data_split.py  dev_label_checker.ipynb  dev_output.ipynb  dev_output_analysis.ipynb  dev_output_analysis_nf.ipynb  distilBERT.ipynb  test_all.csv
src/DATA Changes/: Dataframe index and save.ipynb  dev1.csv  dev_es.csv  train.csv  train_mx.csv
src/Test Models/: Train_dev_all_BETO.ipynb  Train_dev_all_roBERTa(es).ipynb  Train_dev_all_roBERTa.ipynb
src/data-changes/: dev_pe.csv  dev_uy.csv  train_cr.csv  train_es.csv  train_pe.csv
src/spanishclassifier/: __init__.py  dataset.py  dataset_cli.py  evaluator_cli.py  infer_cli.py  showcase_app.py  train_cli.py
(+33 files in other folders)
